# ChangeLog for dev-lang/python
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.752 2014/03/28 01:45:34 floppym Exp $

*python-3.4.0 (28 Mar 2014)

  28 Mar 2014; Mike Gilbert <floppym@gentoo.org> +python-3.4.0.ebuild:
  Version bump. Permanently drop the 'doc' use flag.

*python-3.3.5 (28 Mar 2014)

  28 Mar 2014; Mike Gilbert <floppym@gentoo.org> +python-3.3.5.ebuild:
  Version bump.

  20 Mar 2014; Jeroen Roovers <jer@gentoo.org> python-2.7.6.ebuild:
  Stable for HPPA (bug #504742).

  18 Mar 2014; Agostino Sarubbo <ago@gentoo.org> python-3.3.3.ebuild:
  Stable for ia64, wrt bug #497758

  16 Mar 2014; Mike Gilbert <floppym@gentoo.org> python-2.6.9.ebuild:
  Backport fix for bug 503180.

*python-3.4.0_rc3 (15 Mar 2014)

  15 Mar 2014; Mike Gilbert <floppym@gentoo.org> +python-3.4.0_rc3.ebuild:
  Bump.

  15 Mar 2014; Mike Gilbert <floppym@gentoo.org> python-2.7.6.ebuild:
  Backport upstream fixes for bug 503180.

  01 Mar 2014; Mike Gilbert <floppym@gentoo.org> python-3.4.0_rc1.ebuild:
  Disable ensurepip.

*python-3.4.0_rc1 (17 Feb 2014)

  17 Feb 2014; Mike Gilbert <floppym@gentoo.org> +python-3.4.0_rc1.ebuild:
  Version bump for testing. Thanks to Arfrever for the patches.

*python-3.3.4 (17 Feb 2014)

  17 Feb 2014; Mike Gilbert <floppym@gentoo.org> +python-3.3.4.ebuild:
  Version bump. Thanks to Arfrever for maintaining the patchset.

  08 Feb 2014; Mike Gilbert <floppym@gentoo.org> python-3.3.3.ebuild:
  Add workaround for race condition when generating Python-ast.c and Python-
  ast.h. Thanks to Arfrever.

  05 Feb 2014; Mike Frysinger <vapier@gentoo.org> python-3.3.3.ebuild:
  Mark arm64/m68k/s390/sh stable.

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> python-3.3.3.ebuild:
  Stable for sparc, wrt bug #497758

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> python-3.3.3.ebuild:
  Stable for x86, wrt bug #497758
