@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/python
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.752 2014/03/28 01:45:34 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.753 2014/03/28 02:10:17 floppym Exp $
+
+  28 Mar 2014; Mike Gilbert <floppym@gentoo.org> python-3.2.5-r3.ebuild:
+  Backport readline-6.3 fixes to python-3.2.5, bug 505416.
 
 *python-3.4.0 (28 Mar 2014)
 
